--- a/Note-Namer-Level-11/index.html
+++ b/Note-Namer-Level-11/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Note-Namer Level 8a</title>
+<title>Note-Namer Level 11</title>
 <style>
     body {
         margin: auto;
