--- a/Note-Namer-Level-9b/index.html
+++ b/Note-Namer-Level-9b/index.html
@@ -93,7 +93,7 @@
         { src: "assets/images/A-Cs-Fs.jpg", fretSrc: "assets/images/Triad A-Cs-Fs.jpg", answer: "A-C#-F#", audio: "assets/audio/A-Cs-Fs.mp3" },
         { src: "assets/images/A-Cs-G.jpg", fretSrc: "assets/images/Triad A-Cs-G.jpg", answer: "A-C#-G", audio: "assets/audio/A-Cs-G.mp3" },
         { src: "assets/images/A-D-Fs.jpg", fretSrc: "assets/images/Triad A-D-Fs.jpg", answer: "A-D-F#", audio: "assets/audio/A-D-Fs.mp3" },
-        { src: "assets/images/Ab-B-F.jpg", fretSrc: "assets/images/Triad Ab-B-F.jpg", answer: "A♭-B-F", audio: "assets/audio/Ab-B-F.mp3" },
+        { src: "assets/images/Ab-B-F.jpg", fretSrc: "assets/images/Triad Ab-B-F.jpg", answer: "A♭-B-F", audio: "assets/audio/Gs-B-F.mp3" },
         { src: "assets/images/As-Cs-E.jpg", fretSrc: "assets/images/Triad As-Cs-E.jpg", answer: "A#-C#-E", audio: "assets/audio/As-Cs-E.mp3" },
         { src: "assets/images/Bb-C-E.jpg", fretSrc: "assets/images/Triad Bb-C-E.jpg", answer: "B♭-C-E", audio: "assets/audio/Bb-C-E.mp3" },
         { src: "assets/images/Bb-C-G.jpg", fretSrc: "assets/images/Triad Bb-C-G.jpg", answer: "B♭-C-G", audio: "assets/audio/Bb-C-G.mp3" },
