--- a/Note-Namer-Level-11/index.html
+++ b/Note-Namer-Level-11/index.html
@@ -111,7 +111,7 @@
 
     
     function shuffleOrder() {
-        const numbers = [0, 1, 2, 3, 4, 5];
+        const numbers = [0, 1, 2, 3, 4, 5, 6, 7];
         for (let i = numbers.length - 1; i > 0; i--) {
             const j = Math.floor(Math.random() * (i + 1));
             [numbers[i], numbers[j]] = [numbers[j], numbers[i]];
