--- a/Note-Namer-Level-12/index.html
+++ b/Note-Namer-Level-12/index.html
@@ -102,13 +102,13 @@
         { src: "assets/images/Staff/A.jpg",   fretSrc: "assets/images/Fingerboard/A.jpg",           answer: "A",    audio: "assets/audio/Note Name Audio Low A.wav" },
         { src: "assets/images/Staff/A1.jpg",  fretSrc: "assets/images/Fingerboard/A1.tif",          answer: "A",    audio: "assets/audio/Note Name Audio A1.wav" },
         { src: "assets/images/Staff/As1.jpg", fretSrc: "assets/images/Fingerboard/Bb1 or As1.jpg",  answer: "A#",   audio: "assets/audio/Note Name Audio As-Bb1.wav" },
-        { src: "assets/images/Staff/B.jpg",   fretSrc: "assets/images/Fingerboard/B.jpg",           answer: "B",    audio: "assets/audio/Note Name Audio Low B.wav" },
+        { src: "assets/images/Staff/B.jpg",   fretSrc: "assets/images/Fingerboard/B.jpg",           answer: "B",    audio: "assets/audio/Note Name Audio Low B.mp3" },
         { src: "assets/images/Staff/B1.jpg",  fretSrc: "assets/images/Fingerboard/B1 on (3).jpg",   answer: "B",    audio: "assets/audio/Note Name Audio B1.mp3" },
         { src: "assets/images/Staff/B1.jpg",  fretSrc: "assets/images/Fingerboard/B1.tif",          answer: "B",    audio: "assets/audio/Note Name Audio B1.mp3" },
         { src: "assets/images/Staff/Bb1.jpg", fretSrc: "assets/images/Fingerboard/Bb1 or As1.jpg",  answer: "B♭",   audio: "assets/audio/Note Name Audio As-Bb1.wav" },
         { src: "assets/images/Staff/C1.jpg",  fretSrc: "assets/images/Fingerboard/C1.jpg",          answer: "C",    audio: "assets/audio/Note Name Audio C1.wav" },
         { src: "assets/images/Staff/C2.jpg",  fretSrc: "assets/images/Fingerboard/C2.tif",          answer: "C",    audio: "assets/audio/Note Name Audio C2.wav" },
-        { src: "assets/images/Staff/Cs1.jpg", fretSrc: "assets/images/Fingerboard/Cs1.jpg",         answer: "C#",   audio: "assets/audio/Note Name Audio Cs1.wav" },
+        { src: "assets/images/Staff/Cs1.jpg", fretSrc: "assets/images/Fingerboard/Cs1.jpg",         answer: "C#",   audio: "assets/audio/Note Name Audio Cs1.mp3" },
         { src: "assets/images/Staff/Cs2.jpg", fretSrc: "assets/images/Fingerboard/Cs2.jpg",         answer: "C#",   audio: "assets/audio/Note Name Audio Cs2.wav" },
         { src: "assets/images/Staff/D1.jpg",  fretSrc: "assets/images/Fingerboard/D1.jpg",          answer: "D",    audio: "assets/audio/Note Name Audio D1.wav" },
         { src: "assets/images/Staff/D2.jpg",  fretSrc: "assets/images/Fingerboard/D2.tif",          answer: "D",    audio: "assets/audio/Note Name Audio D2.wav" },
@@ -128,8 +128,8 @@
         { src: "assets/images/Staff/G1.jpg",  fretSrc: "assets/images/Fingerboard/G1.tif",          answer: "G",    audio: "assets/audio/Note Name Audio G1.wav" },
         { src: "assets/images/Staff/G2.jpg",  fretSrc: "assets/images/Fingerboard/G2.jpg",          answer: "G",    audio: "assets/audio/Note Name Audio G2.wav" },
         { src: "assets/images/Staff/Gs.jpg",  fretSrc: "assets/images/Fingerboard/Gs.jpg",          answer: "G#",   audio: "assets/audio/Note Name Audio Low Gs.wav" },
-        { src: "assets/images/Staff/Gs1.jpg", fretSrc: "assets/images/Fingerboard/Gs1.jpg",         answer: "G#",   audio: "assets/audio/Note Name Audio Gs1-Ab1.wav" },
-        { src: "assets/images/Staff/Gs2.jpg", fretSrc: "assets/images/Fingerboard/Gs2.jpg",         answer: "G#",   audio: "assets/audio/Note Name Audio Gs2-Ab2.wav" },
+        { src: "assets/images/Staff/Gs1.jpg", fretSrc: "assets/images/Fingerboard/Gs1.jpg",         answer: "G#",   audio: "assets/audio/Note Name Audio Gs1.wav" },
+        { src: "assets/images/Staff/Gs2.jpg", fretSrc: "assets/images/Fingerboard/Gs2.jpg",         answer: "G#",   audio: "assets/audio/Note Name Audio Gs2.wav" },
     ];
     
 
