--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -36,7 +36,7 @@
     }
     b.answer {
         font-size: 150%;
-        top: -.1rem;
+        top: .3rem;
         margin-left: -1.5rem;
         position: absolute;
         color: green;
@@ -135,6 +135,7 @@
         <button id="answerButton", title="Answer", onmouseenter="showAnswer(true)", onmouseleave="showAnswer(false)">Answer</button>
     </div> -->
     <div>
+        <br><br>
         <b id="answer", class="answer"> </b>
     </div>
     
