--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -37,6 +37,7 @@
     b.answer {
         font-size: 150%;
         top: .3rem;
+        margin-left: -2rem;
         position: absolute;
         color: green;
     }
@@ -104,7 +105,7 @@
     } */
     button.skip {
         position: absolute;
-        top: 7rem;
+        top: 8rem;
         margin-left: 5rem;
         font-size: 150%;
     }
