--- a/Note-Namer-Level-3/index.html
+++ b/Note-Namer-Level-3/index.html
@@ -181,6 +181,7 @@
 
         const optionsContainer = document.getElementById("options");
         optionsContainer.innerHTML = "";
+        optionsContainer.childNodes.forEach(child => child.remove());
         buttonOptions.forEach(option => {
             if (option === "|") {
                 let br = document.createElement("br");
