--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -157,7 +157,7 @@
         { src: "assets/images/Strings 123/A min7-123.jpg",          quality: "m7",          answer: "A",    audio: "assets/audio/Strings 123/A min7-123.mp3" },
         { src: "assets/images/Strings 123/A sus-123.jpg",           quality: "sus",         answer: "A",    audio: "assets/audio/Strings 123/Asus-123.mp3" },
         { src: "assets/images/Strings 123/As dim-123.jpg",          quality: "dim",         answer: "A#",   audio: "assets/audio/Strings 123/As dim-123.mp3" },
-        { src: "assets/images/Strings 123/B half dim-123.jpg",      quality: "dim",         answer: "B",    audio: "assets/audio/Strings 123/B half dim-123.mp3" },
+        { src: "assets/images/Strings 123/B half dim-123.jpg",      quality: "o7",         answer: "B",    audio: "assets/audio/Strings 123/B half dim-123.mp3" },
         { src: "assets/images/Strings 123/Bb maj-123.jpg",          quality: "maj",         answer: "B♭",   audio: "assets/audio/Strings 123/Bb maj-123.mp3" },
         { src: "assets/images/Strings 123/C 7-123-1.jpg",           quality: "7",           answer: "C",    audio: "assets/audio/Strings 123/C7-123-1.mp3" },
         { src: "assets/images/Strings 123/C 7-123-2.jpg",           quality: "7",           answer: "C",    audio: "assets/audio/Strings 123/C7-123-2.mp3" },
@@ -192,8 +192,8 @@
         { src: "assets/images/Strings 432/G maj.jpg",               quality: "maj",         answer: "G ",   audio: "assets/audio/Strings 432/G maj.mp3" },
         { src: "assets/images/Strings 432/Gs fully diminished.jpg", quality: "o7",          answer: "G#",   audio: "assets/audio/Strings 432/Gs dim 7.mp3" },
         { src: "assets/images/Strings 432/Ga.jpg",                  quality: "aug",         answer: "G",    audio: "assets/audio/Strings 432/Ga.mp3" },
-        { src: "assets/images/Strings 432/G7-1.jpg",                quality: "m7",          answer: "G",    audio: "assets/audio/Strings 432/G7-1.mp3" },
-        { src: "assets/images/Strings 432/G7-2.jpg",                quality: "m7",          answer: "G",    audio: "assets/audio/Strings 432/G7-2.mp3" },
+        { src: "assets/images/Strings 432/G7-1.jpg",                quality: "7",          answer: "G",    audio: "assets/audio/Strings 432/G7-1.mp3" },
+        { src: "assets/images/Strings 432/G7-2.jpg",                quality: "7",          answer: "G",    audio: "assets/audio/Strings 432/G7-2.mp3" },
     ];  
     let buttonOptions = ["A", "B", "C", "D", "E", "F", "G"];
     let buttonAccidentals = ["#", "♭"];
@@ -286,6 +286,7 @@
 
         let optionsContainer = document.getElementById("options");
         optionsContainer.innerHTML = "";
+        optionsContainer.childNodes.forEach(child => child.remove());
         let letterDirections = document.createElement("b");
         letterDirections.textContent = "Chord Letter:";
         letterDirections.classList.add("chord")
