--- a/Note-Namer-Level-7/index.html
+++ b/Note-Namer-Level-7/index.html
@@ -194,6 +194,7 @@
 
         const optionsContainer = document.getElementById("options");
         optionsContainer.innerHTML = "";
+        optionsContainer.childNodes.forEach(child => child.remove());
         buttonOptions.forEach(option => {
             if (option === "|") {
                 optionsContainer.appendChild(document.createElement("br"));
