--- a/Note-Namer-Level-5/index.html
+++ b/Note-Namer-Level-5/index.html
@@ -52,6 +52,8 @@
     button.accidental {
         margin-left: 1.8%;
         margin-right: 1.8%;
+        min-height: 2.3rem;
+        min-width: 2.1rem;
     }
     @keyframes shake {
         0% {
