--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -19,19 +19,19 @@
         max-height: 100%;
     }
     b.chord {
-        margin-left: -10rem;
-        margin-right: .7rem;
-        font-size: 150%;
+        margin-left: -9.2rem;
+        margin-right: -.3rem;
+        font-size: 140%;
     }
     b.accidental {
-        margin-left: -24rem;
-        margin-right: 11.5rem;
-        font-size: 150%;
+        margin-left: -13rem;
+        margin-right: .65rem;
+        font-size: 140%;
     }
     b.quality {
-        margin-left: -14rem;
-        margin-right: 4.5rem;
-        font-size: 150%;
+        margin-left: -9.5rem;
+        margin-right: -.6rem;
+        font-size: 140%;
 
     }
     b.answer {
