--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -19,18 +19,18 @@
         max-height: 100%;
     }
     b.chord {
-        margin-left: -9.2rem;
-        margin-right: -.3rem;
+        margin-left: -8.8rem;
+        margin-right: 0rem;
         font-size: 140%;
     }
     b.accidental {
         margin-left: -13rem;
-        margin-right: .65rem;
+        margin-right: 1.3rem;
         font-size: 140%;
     }
     b.quality {
         margin-left: -9.5rem;
-        margin-right: -.6rem;
+        margin-right: 0rem;
         font-size: 140%;
 
     }
