--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -127,7 +127,8 @@
 
 </style>
 </head>
-<body>
+<body style="overflow: auto; height: 100vh; width: 100vw">
+    
     <!-- <div>
         <button id="answerButton", title="Answer", onmouseenter="showAnswer(true)", onmouseleave="showAnswer(false)">Answer</button>
     </div> -->
