--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -21,17 +21,17 @@
     b.chord {
         margin-left: -8.8rem;
         margin-right: 0rem;
-        font-size: 140%;
+        font-size: 130%;
     }
     b.accidental {
         margin-left: -13rem;
         margin-right: 1.3rem;
-        font-size: 140%;
+        font-size: 130%;
     }
     b.quality {
         margin-left: -9.5rem;
         margin-right: 0rem;
-        font-size: 140%;
+        font-size: 130%;
 
     }
     b.answer {
@@ -127,7 +127,7 @@
 
 </style>
 </head>
-<body style="overflow: auto; height: 100vh; width: 100vw">
+<body style="overflow: auto; height: 100vh; width: 100vw;">
     
     <!-- <div>
         <button id="answerButton", title="Answer", onmouseenter="showAnswer(true)", onmouseleave="showAnswer(false)">Answer</button>
