--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -19,17 +19,17 @@
         max-height: 100%;
     }
     b.chord {
-        margin-left: -8.8rem;
-        margin-right: 0rem;
+        margin-left: -17.6vw;
+        margin-right: 0vw;
         font-size: 110%;
     }
     b.accidental {
-        margin-left: -13rem;
-        margin-right: 1.3rem;
+        margin-left: -29vw;
+        margin-right: 6vw;
         font-size: 110%;
     }
     b.quality {
-        margin-left: -9.5rem;
+        margin-left: -18.7vw;
         margin-right: 0rem;
         font-size: 110%;
 
@@ -88,8 +88,9 @@
         background-color: #6f9cf5;
     }
     button.coloring {
-        top: -10rem;
-        margin-left: 1.8rem;
+        position: relative;
+        top: -3vh;
+        margin-left: 3.5vw;
     }
     button.coloring:hover {
         /* background-color: #6f9cf5; */
