d min fix and skip sizing

--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -103,9 +103,9 @@
     } */
     button.skip {
         position: absolute;
-        top: 9rem;
+        top: 25vh;
         margin-left: 5rem;
-        font-size: 150%;
+        font-size: 120%;
     }
     @keyframes shake {
         0% {
@@ -180,7 +180,7 @@
         { src: "assets/images/Strings 432/C maj.jpg",               quality: "maj",         answer: "C",    audio: "assets/audio/Strings 432/C maj.mp3" },
         { src: "assets/images/Strings 432/C7.jpg",                  quality: "7",           answer: "C",    audio: "assets/audio/Strings 432/C7.mp3" },
         { src: "assets/images/Strings 432/Cm.jpg",                  quality: "min",         answer: "C",    audio: "assets/audio/Strings 432/Cm.mp3" },
-        { src: "assets/images/Strings 432/D min.mp3",               quality: "min",         answer: "D",    audio: "assets/audio/Strings 432/D min.mp3" },
+        { src: "assets/images/Strings 432/D min.jpg",               quality: "min",         answer: "D",    audio: "assets/audio/Strings 432/D min.mp3" },
         { src: "assets/images/Strings 432/Ds fully diminished.jpg", quality: "o7",          answer: "D#",   audio: "assets/audio/Strings 432/Ds Diminished 7.mp3" },
         { src: "assets/images/Strings 432/D7.jpg",                  quality: "7",           answer: "D",    audio: "assets/audio/Strings 432/D7.mp3" },
         { src: "assets/images/Strings 432/E7.jpg",                  quality: "7",           answer: "E",    audio: "assets/audio/Strings 432/E7.mp3" },
