--- a/Note-Namer-Level-Chord-Mobile/index.html
+++ b/Note-Namer-Level-Chord-Mobile/index.html
@@ -9,8 +9,9 @@
         margin: auto;
         font-family: Arial, sans-serif;
         text-align: center;
-        width: 65%;
-        height: 65%;
+        min-height: 100vh !important;
+        min-width: 100vw !important;
+        font-size: 10 !important;
     }
     img {
         max-width: 33.4%;
