--- a/Note-Namer-Level-12/index.html
+++ b/Note-Namer-Level-12/index.html
@@ -87,7 +87,7 @@
 <audio id="audio" controls style="display: none;"></audio>
 <script>
     const images = [
-        { src: "assets/images/Staff/A.jpg",   fretSrc: "assets/images/Fingerboard/A.jpg",           answer: "A",    audio: "assets/audio/Note Name Audio Low A.wav" },
+        { src: "assets/images/Staff/A.jpg",   fretSrc: "assets/images/Fingerboard/A.jpg",           answer: "A",    audio: "assets/audio/Note Name Audio Low A.mp3" },
         { src: "assets/images/Staff/A1.jpg",  fretSrc: "assets/images/Fingerboard/A1.tif",          answer: "A",    audio: "assets/audio/Note Name Audio A1.wav" },
         { src: "assets/images/Staff/As1.jpg", fretSrc: "assets/images/Fingerboard/Bb1 or As1.jpg",  answer: "A#",   audio: "assets/audio/Note Name Audio As-Bb1.wav" },
         { src: "assets/images/Staff/B.jpg",   fretSrc: "assets/images/Fingerboard/B.jpg",           answer: "B",    audio: "assets/audio/Note Name Audio Low B.mp3" },
@@ -95,6 +95,7 @@
         { src: "assets/images/Staff/B1.jpg",  fretSrc: "assets/images/Fingerboard/B1 on (3).jpg",   answer: "B",    audio: "assets/audio/Note Name Audio B1.mp3" },
         { src: "assets/images/Staff/B1.jpg",  fretSrc: "assets/images/Fingerboard/B1.tif",          answer: "B",    audio: "assets/audio/Note Name Audio B1.mp3" },
         { src: "assets/images/Staff/Bb1.jpg", fretSrc: "assets/images/Fingerboard/Bb1 or As1.jpg",  answer: "B♭",   audio: "assets/audio/Note Name Audio As-Bb1.wav" },
+        { src: "assets/images/Staff/C.jpg",  fretSrc: "assets/images/Fingerboard/C.jpg",            answer: "C",    audio: "assets/audio/Note Name Audio Low C.mp3" },
         { src: "assets/images/Staff/C1.jpg",  fretSrc: "assets/images/Fingerboard/C1.jpg",          answer: "C",    audio: "assets/audio/Note Name Audio C1.wav" },
         { src: "assets/images/Staff/C2.jpg",  fretSrc: "assets/images/Fingerboard/C2.tif",          answer: "C",    audio: "assets/audio/Note Name Audio C2.wav" },
         { src: "assets/images/Staff/Cs1.jpg", fretSrc: "assets/images/Fingerboard/Cs1.jpg",         answer: "C#",   audio: "assets/audio/Note Name Audio Cs1.mp3" },
@@ -103,17 +104,17 @@
         { src: "assets/images/Staff/D2.jpg",  fretSrc: "assets/images/Fingerboard/D2.tif",          answer: "D",    audio: "assets/audio/Note Name Audio D2.wav" },
         { src: "assets/images/Staff/Ds1.jpg", fretSrc: "assets/images/Fingerboard/Ds1 or Eb1.jpg",  answer: "D#",   audio: "assets/audio/Note Name Audio Ds1-Eb1.wav" },
         { src: "assets/images/Staff/Ds2.jpg", fretSrc: "assets/images/Fingerboard/A.jpg",           answer: "D#",   audio: "assets/audio/Note Name Audio Ds2.wav" },
-        { src: "assets/images/Staff/E.jpg",   fretSrc: "assets/images/Fingerboard/E.jpg",           answer: "E",    audio: "assets/audio/Note Name Audio Low E.wav" },
+        { src: "assets/images/Staff/E.jpg",   fretSrc: "assets/images/Fingerboard/E.jpg",           answer: "E",    audio: "assets/audio/Note Name Audio Low E.mp3" },
         { src: "assets/images/Staff/E1.jpg",  fretSrc: "assets/images/Fingerboard/E1.jpg",          answer: "E",    audio: "assets/audio/Note Name Audio E1.wav" },
         { src: "assets/images/Staff/E2.jpg",  fretSrc: "assets/images/Fingerboard/E2.jpg",          answer: "E",    audio: "assets/audio/Note Name Audio E2.wav" },
         { src: "assets/images/Staff/Eb1.jpg", fretSrc: "assets/images/Fingerboard/Ds1 or Eb1.jpg",  answer: "E♭",   audio: "assets/audio/Note Name Audio Ds1-Eb1.wav" },
-        { src: "assets/images/Staff/F.jpg",   fretSrc: "assets/images/Fingerboard/F.jpg",           answer: "F",    audio: "assets/audio/Note Name Audio Low F.wav" },
+        { src: "assets/images/Staff/F.jpg",   fretSrc: "assets/images/Fingerboard/F.jpg",           answer: "F",    audio: "assets/audio/Note Name Audio Low F.mp3" },
         { src: "assets/images/Staff/F1.jpg",  fretSrc: "assets/images/Fingerboard/F1.jpg",          answer: "F",    audio: "assets/audio/Note Name Audio F1.wav" },
-        { src: "assets/images/Staff/F2.jpg",  fretSrc: "assets/images/Fingerboard/F2.jpg",          answer: "F",    audio: "assets/audio/Note Name Audio F2.wav" },
+        { src: "assets/images/Staff/F2.jpg",  fretSrc: "assets/images/Fingerboard/F2.jpg",          answer: "F",    audio: "assets/audio/Note Name Audio F2.mp3" },
         { src: "assets/images/Staff/Fs.jpg",  fretSrc: "assets/images/Fingerboard/Fs.jpg",          answer: "F#",   audio: "assets/audio/Note Name Audio Low Fs.wav" },
         { src: "assets/images/Staff/Fs1.jpg", fretSrc: "assets/images/Fingerboard/Fs1.jpg",         answer: "F#",   audio: "assets/audio/Note Name Audio Fs1.wav" },
         { src: "assets/images/Staff/Fs2.jpg", fretSrc: "assets/images/Fingerboard/Fs2.jpg",         answer: "F#",   audio: "assets/audio/Note Name Audio Fs2.wav" },
-        { src: "assets/images/Staff/G.jpg",   fretSrc: "assets/images/Fingerboard/G.jpg",           answer: "G",    audio: "assets/audio/Note Name Audio Low G.wav" },
+        { src: "assets/images/Staff/G.jpg",   fretSrc: "assets/images/Fingerboard/G.jpg",           answer: "G",    audio: "assets/audio/Note Name Audio Low G.mp3" },
         { src: "assets/images/Staff/G1.jpg",  fretSrc: "assets/images/Fingerboard/G1.tif",          answer: "G",    audio: "assets/audio/Note Name Audio G1.wav" },
         { src: "assets/images/Staff/G2.jpg",  fretSrc: "assets/images/Fingerboard/G2.jpg",          answer: "G",    audio: "assets/audio/Note Name Audio G2.wav" },
         { src: "assets/images/Staff/Gs.jpg",  fretSrc: "assets/images/Fingerboard/Gs.jpg",          answer: "G#",   audio: "assets/audio/Note Name Audio Low Gs.wav" },
