--- a/Note-Namer-Level-0/index.html
+++ b/Note-Namer-Level-0/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Note-Namer Level 1</title>
+<title>Note-Namer Level 0</title>
 <style>
     
     body {
@@ -132,17 +132,27 @@
     async function switchImages() {
         const switchButton = document.getElementById("switchImageButton");
         if (switchButton.textContent === "Fretboard") {
+            await loadImage(images[imageOrder[count]].fretSrc);
             document.getElementById("quizImage").classList.add("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].fretSrc;
             switchButton.textContent = "Staff";
         }
         else {
+            await loadImage(images[imageOrder[count]].src);
             document.getElementById("quizImage").classList.remove("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].src;
             switchButton.textContent = "Fretboard";
         }
     }
-    
+
+    function loadImage(src) {
+        return new Promise((resolve, reject) => {
+            const image = new Image();
+            image.onload = () => resolve();
+            image.onerror = () => reject();
+            image.src = src;
+        });
+    }
 
     function displayQuestion() {
         if (count >= images.length) {
@@ -150,6 +160,7 @@
             imageOrder = shuffleOrder();
         }
 
+        loadImage(images[imageOrder[count]].fretSrc);
         const currentImage = images[imageOrder[count]];
         //shuffleButtonOptions(buttonOptions);
 
