--- a/Note-Namer-Level-1/index.html
+++ b/Note-Namer-Level-1/index.html
@@ -136,15 +136,26 @@
     async function switchImages() {
         const switchButton = document.getElementById("switchImageButton");
         if (switchButton.textContent === "Fretboard") {
+            await loadImage(images[imageOrder[count]].fretSrc);
             document.getElementById("quizImage").classList.add("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].fretSrc;
             switchButton.textContent = "Staff";
         }
         else {
+            await loadImage(images[imageOrder[count]].src);
             document.getElementById("quizImage").classList.remove("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].src;
             switchButton.textContent = "Fretboard";
         }
+    }
+
+    function loadImage(src) {
+        return new Promise((resolve, reject) => {
+            const image = new Image();
+            image.onload = () => resolve();
+            image.onerror = () => reject();
+            image.src = src;
+        });
     }
     
 
@@ -154,6 +165,7 @@
             imageOrder = shuffleOrder();
         }
 
+        loadImage(images[imageOrder[count]].src);
         const currentImage = images[imageOrder[count]];
         //shuffleButtonOptions(buttonOptions);
 
