--- a/Note-Namer-Level-11/index.html
+++ b/Note-Namer-Level-11/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 <div>
-    <button id="switchImageButton", title="Fretboard", onclick="switchimages()">Fretboard</button>
+    <button id="switchImageButton", title="Fretboard", onclick="switchImages()">Fretboard</button>
 </div>
 <img id="quizImage" src="" alt="Quiz Image">
 <div id="options">
@@ -149,18 +149,29 @@
         }
     }
 
-    async function switchimages() {
+    async function switchImages() {
         const switchButton = document.getElementById("switchImageButton");
         if (switchButton.textContent === "Fretboard") {
+            await loadImage(images[imageOrder[count]].fretSrc);
             document.getElementById("quizImage").classList.add("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].fretSrc;
             switchButton.textContent = "Staff";
         }
         else {
+            await loadImage(images[imageOrder[count]].src);
             document.getElementById("quizImage").classList.remove("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].src;
             switchButton.textContent = "Fretboard";
         }
+    }
+
+    function loadImage(src) {
+        return new Promise((resolve, reject) => {
+            const image = new Image();
+            image.onload = () => resolve();
+            image.onerror = () => reject();
+            image.src = src;
+        });
     }
     
 
@@ -171,6 +182,7 @@
             imageOrder = shuffleOrder();
         }
 
+        loadImage(images[imageOrder[count]].src);
         const currentImage = images[imageOrder[count]];
         //shuffleButtonOptions(buttonOptions);
 
