--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -245,18 +245,29 @@
         }
     }
 
-    async function switchimages() {
-        let switchButton = document.getElementById("switchImageButton");
+    async function switchImages() {
+        const switchButton = document.getElementById("switchImageButton");
         if (switchButton.textContent === "Fretboard") {
+            await loadImage(images[imageOrder[count]].fretSrc);
             document.getElementById("quizImage").classList.add("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].fretSrc;
             switchButton.textContent = "Staff";
         }
         else {
+            await loadImage(images[imageOrder[count]].src);
             document.getElementById("quizImage").classList.remove("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].src;
             switchButton.textContent = "Fretboard";
         }
+    }
+
+    function loadImage(src) {
+        return new Promise((resolve, reject) => {
+            const image = new Image();
+            image.onload = () => resolve();
+            image.onerror = () => reject();
+            image.src = src;
+        });
     }
     
 
@@ -266,6 +277,7 @@
             imageOrder = shuffleOrder();
         }
         
+        loadImage(images[imageOrder[count]].src);
         document.querySelector("#answer").textContent = " ";
 
         let currentImage = images[imageOrder[count]];
