--- a/Note-Namer-Level-7/index.html
+++ b/Note-Namer-Level-7/index.html
@@ -158,18 +158,29 @@
         }
     }
 
-    async function switchimages() {
+    async function switchImages() {
         const switchButton = document.getElementById("switchImageButton");
         if (switchButton.textContent === "Fretboard") {
+            await loadImage(images[imageOrder[count]].fretSrc);
             document.getElementById("quizImage").classList.add("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].fretSrc;
             switchButton.textContent = "Staff";
         }
         else {
+            await loadImage(images[imageOrder[count]].src);
             document.getElementById("quizImage").classList.remove("fret");
             document.getElementById("quizImage").src = images[imageOrder[count]].src;
             switchButton.textContent = "Fretboard";
         }
+    }
+
+    function loadImage(src) {
+        return new Promise((resolve, reject) => {
+            const image = new Image();
+            image.onload = () => resolve();
+            image.onerror = () => reject();
+            image.src = src;
+        });
     }
     
 
@@ -179,7 +190,7 @@
             count = 0;
             imageOrder = shuffleOrder();
         }
-
+        loadImage(images[imageOrder[count]].src);
         const currentImage = images[imageOrder[count]];
         //shuffleButtonOptions(buttonOptions);
 
