--- a/Note-Namer-Level-6/index.html
+++ b/Note-Namer-Level-6/index.html
@@ -88,18 +88,12 @@
 <script>
     const images = [
         { src: "assets/images/B-Fs.jpg", fretSrc: "assets/images/Dyad B-Fs.jpg", answer:  "B-F#", audio: "assets/audio/B-Fs.mp3" },
-        { src: "assets/images/Bb-C.jpg", fretSrc: "assets/images/Dyad Bb-C.jpg", answer:  "B♭-C", audio: "assets/audio/Bb-C.mp3" },
-        { src: "assets/images/Bb-D.jpg", fretSrc: "assets/images/Dyad Bb-D.jpg", answer:  "B♭-D", audio: "assets/audio/Bb-D.mp3" },
         { src: "assets/images/C-Fs.jpg", fretSrc: "assets/images/Dyad C-Fs.jpg", answer:  "C-F#", audio: "assets/audio/C-Fs.mp3" },
         { src: "assets/images/Cs-E.jpg", fretSrc: "assets/images/Dyad Cs-E.jpg", answer:  "C#-E", audio: "assets/audio/Cs-E.mp3" },
         { src: "assets/images/Cs-F.jpg", fretSrc: "assets/images/Dyad Cs-F.jpg", answer:  "C#-F", audio: "assets/audio/Cs-F.mp3" },
         { src: "assets/images/Cs-Fs.jpg", fretSrc: "assets/images/Dyad Cs-Fs.jpg", answer: "C#-F#", audio: "assets/audio/Cs-Fs.mp3" },
         { src: "assets/images/Cs-G.jpg", fretSrc: "assets/images/Dyad Cs-G.jpg", answer:  "C#-G", audio: "assets/audio/Cs-G.mp3" },
         { src: "assets/images/D-Fs.jpg", fretSrc: "assets/images/Dyad D-Fs.jpg", answer:  "D-F#", audio: "assets/audio/D-Fs.mp3" },
-        { src: "assets/images/Gs-B.jpg", fretSrc: "assets/images/Dyad Gs-B.jpg", answer: "G#-B", audio: "assets/audio/Gs-B.mp3" },
-        { src: "assets/images/Gs-C.jpg", fretSrc: "assets/images/Dyad Gs-C.jpg", answer: "G#-C", audio: "assets/audio/Gs-C.mp3" },
-        { src: "assets/images/Gs-Cs.jpg", fretSrc: "assets/images/Dyad Gs-Cs.jpg", answer: "G#-C#", audio: "assets/audio/Gs-Cs.mp3" },
-        { src: "assets/images/Gs-D.jpg", fretSrc: "assets/images/Dyad Gs-D.jpg", answer: "G#-D", audio: "assets/audio/Gs-D.mp3" },
     ];
 
     let buttonOptions = ["A", "B", "C", "D", "E", "F", "G"];
@@ -115,7 +109,7 @@
 
     
     function shuffleOrder() {
-    const numbers = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12];
+    const numbers = [0, 1, 2, 3, 4, 5, 6];
         for (let i = numbers.length - 1; i > 0; i--) {
             const j = Math.floor(Math.random() * (i + 1));
             [numbers[i], numbers[j]] = [numbers[j], numbers[i]];
