--- a/Note-Namer-Level-13/index.html
+++ b/Note-Namer-Level-13/index.html
@@ -47,7 +47,7 @@
         font-size: 120%;
         cursor: pointer;
         border: none;
-        border-radius: 45%;
+        border-radius: 20px;
         color: white;
         background-color: #bc4c01;
         filter: drop-shadow(2px 2px 4px #414040);
@@ -153,9 +153,9 @@
         { src: "assets/images/Strings 123/A majo-123.jpg",          quality: "maj",         answer: "A",    audio: "assets/audio/Strings 123/A maj-123.mp3" },
         { src: "assets/images/Strings 123/A min-123.jpg",           quality: "min",         answer: "A",    audio: "assets/audio/Strings 123/A min-123.mp3" },
         { src: "assets/images/Strings 123/A min7-123.jpg",          quality: "m7",          answer: "A",    audio: "assets/audio/Strings 123/A min7-123.mp3" },
-        { src: "assets/images/Strings 123/A sus-123.jpg",           quality: "sus",         answer: "A",    audio: "assets/audio/Strings 123/Asus-123.mp3" },
+        { src: "assets/images/Strings 123/A sus-123.jpg",           quality: "9",           answer: "A",    audio: "assets/audio/Strings 123/Asus-123.mp3" },
         { src: "assets/images/Strings 123/As dim-123.jpg",          quality: "dim",         answer: "A#",   audio: "assets/audio/Strings 123/As dim-123.mp3" },
-        { src: "assets/images/Strings 123/B half dim-123.jpg",      quality: "o7",         answer: "B",    audio: "assets/audio/Strings 123/B half dim-123.mp3" },
+        { src: "assets/images/Strings 123/B half dim-123.jpg",      quality: "o7",          answer: "B",    audio: "assets/audio/Strings 123/B half dim-123.mp3" },
         { src: "assets/images/Strings 123/Bb maj-123.jpg",          quality: "maj",         answer: "B♭",   audio: "assets/audio/Strings 123/Bb maj-123.mp3" },
         { src: "assets/images/Strings 123/C 7-123-1.jpg",           quality: "7",           answer: "C",    audio: "assets/audio/Strings 123/C7-123-1.mp3" },
         { src: "assets/images/Strings 123/C 7-123-2.jpg",           quality: "7",           answer: "C",    audio: "assets/audio/Strings 123/C7-123-2.mp3" },
