--- a/Note-Namer-Level-9b/index.html
+++ b/Note-Namer-Level-9b/index.html
@@ -24,7 +24,7 @@
         font-size: 120%;
         cursor: pointer;
         border: none;
-        border-radius: 45%;
+        border-radius: 20px;
         color: white;
         background-color: #bc4c01;
         filter: drop-shadow(2px 2px 4px #414040);
